--- a/CanfieldCodingChallenge/CanfieldCodingChallenge/App Layer/Base.lproj/Main.storyboard
+++ b/CanfieldCodingChallenge/CanfieldCodingChallenge/App Layer/Base.lproj/Main.storyboard
@@ -1,24 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Image Processor View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ImageProcessorViewController" customModule="CanfieldCodingChallenge" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subject ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Las-g6-5w7">
+                                <rect key="frame" x="107" y="95" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="LHV-nd-NiX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Oft-4Z-h3t">
+                                <rect key="frame" x="82" y="151.66666666666663" width="250" height="244.33333333333337"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="91E-si-oga"/>
+                                    <constraint firstAttribute="height" constant="250" id="I2X-hb-d0o"/>
+                                </constraints>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNU-zf-mDy">
+                                <rect key="frame" x="156.66666666666666" y="419" width="100.99999999999997" height="30"/>
+                                <state key="normal" title="Capture Image"/>
+                                <connections>
+                                    <action selector="captureImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AAZ-OH-G9E"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A5p-Gn-8Gl">
+                                <rect key="frame" x="167.66666666666666" y="469" width="79" height="30"/>
+                                <state key="normal" title="Save Image"/>
+                                <connections>
+                                    <action selector="saveImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DXI-9f-02q"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="doq-2D-N2p">
+                                <rect key="frame" x="197" y="264" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="A5p-Gn-8Gl" firstAttribute="top" secondItem="mNU-zf-mDy" secondAttribute="bottom" constant="20" id="1Jl-qc-Cua"/>
+                            <constraint firstItem="A5p-Gn-8Gl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GYt-rd-Gcm"/>
+                            <constraint firstItem="doq-2D-N2p" firstAttribute="centerY" secondItem="Oft-4Z-h3t" secondAttribute="centerY" id="OCT-pj-rny"/>
+                            <constraint firstItem="Oft-4Z-h3t" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P7j-lg-6rf"/>
+                            <constraint firstItem="mNU-zf-mDy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PNA-tY-7Nf"/>
+                            <constraint firstItem="mNU-zf-mDy" firstAttribute="top" secondItem="Oft-4Z-h3t" secondAttribute="bottom" constant="20" id="YhS-W4-FI4"/>
+                            <constraint firstItem="Oft-4Z-h3t" firstAttribute="top" secondItem="Las-g6-5w7" secondAttribute="bottom" constant="20" id="ZXX-sf-wc9"/>
+                            <constraint firstItem="doq-2D-N2p" firstAttribute="centerX" secondItem="Oft-4Z-h3t" secondAttribute="centerX" id="d8L-3m-tEA"/>
+                            <constraint firstItem="Las-g6-5w7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.25" id="gOb-uJ-dCF"/>
+                            <constraint firstItem="Las-g6-5w7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mrL-bc-sSC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="doq-2D-N2p" id="Gbz-X2-316"/>
+                        <outlet property="captureImageButton" destination="mNU-zf-mDy" id="ps5-jZ-NCu"/>
+                        <outlet property="imageView" destination="Oft-4Z-h3t" id="T9g-qA-F4t"/>
+                        <outlet property="saveButton" destination="A5p-Gn-8Gl" id="pgI-JS-axa"/>
+                        <outlet property="subjectIDTextField" destination="Las-g6-5w7" id="bIx-7A-MSQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-248" y="92"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" catalog="system" width="128" height="94"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
